# rn-frida-detection

./: CONTRIBUTING.md  LICENSE  README.md  package.json  rn-frida-detection.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/rnfridadetection/: RnFridaDetectionModule.java  RnFridaDetectionPackage.java
cpp/: rn-frida-detection.cpp  rn-frida-detection.h
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/com/rnfridadetectionexample/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: File.swift  Podfile
example/ios/RnFridaDetectionExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/RnFridaDetectionExample.xcodeproj/: project.pbxproj
example/ios/RnFridaDetectionExample.xcodeproj/xcshareddata/xcschemes/: RnFridaDetectionExample.xcscheme
example/ios/RnFridaDetectionExample.xcworkspace/: contents.xcworkspacedata
example/ios/RnFridaDetectionExampleTests/: RnFridaDetectionExampleTests.m
example/src/: App.tsx
ios/: RnFridaDetection.h  RnFridaDetection.mm
src/: index.tsx
